[package]
name = "sparkle_test"
version = "0.1.0"
edition = "2021"

[dependencies.sparkle_algo]
path = "../sparkle_algo"

[dependencies.xuanmi_base_support]
# git = "ssh://git@github.com/taiyi-research-institute/xuanmi_base_support"
git = "https://github.com/taiyi-research-institute/xuanmi_base_support"
rev = "731cb963ba00cbc1adf26645eae8a92f3733c76b"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
curve25519-dalek = { version = "3", features = ["serde"] }
rand = "0.7"
rand_core = "0.6"
sha2 = "0.9"
hex = "0.4.3"
log = "0.4"
env_logger = "0.11"
fast-paillier = { version = "0.1.1", default-features = true, features = ["serde"] }
rug = "1.10.0"
k256 = { version = "0.13", features = ["arithmetic"] }
bitcoin = { version = "0.32.7", features = ["serde", "rand"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }

[dependencies.sha3]
version = "0.10.8"

[dependencies.clap]
version = "3.1.6"
features = ["derive"]

[dependencies.bincode]
version = "1.3.3"

[dependencies.serde_json]
version = "1.0.81"

[dev-dependencies]
